# test_riot

./: README.md
udp/: Makefile  README.md  main.c
udp/script/: 98-stlink.rules  backup.sh  build.sh  cp_3rd_boards_to_riot.sh  debug.sh  docker.sh  flash.sh  run.sh  udev_reload.sh
udp/sender/: Makefile  sender.c
udp/sender/include/: sender.h
udp_recv/: CMakeLists.txt
udp_recv/src/: server.cpp
